--- a/style.css
+++ b/style.css
@@ -60,30 +60,57 @@ nav {
 
 /* Styling logo */
 #logo-Text {
-    font-family: 'Garamond', sans-serif;
+    font-family: 'Brush Script MT', cursive;
     font-weight: bold;
     font-size: 35px;
     color: #4b4cfe;
 }
 
-/* Spesifik halaman login */
 body.login-page {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: linear-gradient(to bottom right, #f7d6de, #d5e7ee, #7391a8);
 }
 
-/* Styling tombol */
 .btn-custom {
     background-color: #6f63f2;
     color: white;
     width: 100%;
 }
 
-/* Styling jumbotron */
 .jumbotron {
+    background: linear-gradient(to bottom right, #f7d6de, #d5e7ee, #7391a8);
+
+}
+/*Styling form Login */
+body.login-page {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.btn-custom {
+    background-color: #6f63f2 !important;
+    color: white !important;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    width: auto;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+.btn-custom:hover {
+    background-color: #5549cc !important;
+}
+
+
+.jumbotron-login {
     background: white;
     padding: 2rem;
     border-radius: 10px;
@@ -91,7 +118,59 @@ body.login-page {
     width: 100%;
 }
 
-/* Toggle button */
+.navbar {
+    padding: 10px;
+}
+
+#logo-Text-home {
+    font-family: 'Brush Script MT', cursive;
+    font-size: 35px;
+    color: blue;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    position: fixed;
+}
+/* Styling Sidebar */
+.navbar .d-flex {
+    display: flex;
+    align-items: center;
+}
+
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
+}
+
+.wrapper {
+    display: flex;
+}
+
+.main {
+    min-height: 100vh;
+    width: 100%;
+    overflow: hidden;
+    transition: all 0.35s ease-in-out;
+}
+
+#sidebar {
+    width: 70px;
+    min-width: 70px;
+    z-index: 1000;
+    transition: all .25s ease-in-out;
+    background-color: #0e2238;
+    display: flex;
+    flex-direction: column;
+}
+
+#sidebar.expand {
+    width: 260px;
+    min-width: 260px;
+}
+
 .toggle-btn {
     background-color: transparent;
     cursor: pointer;
@@ -104,66 +183,94 @@ body.login-page {
     color: #FFF;
 }
 
-.openbtn {
-    font-size: 28px;
-    cursor: pointer;
-    background-color: #111;
-    color: white;
-    padding: 10px 15px;
-    border: none;
+.sidebar-logo {
+    margin: auto 0;
 }
 
-.openbtn:hover {
-    background-color: #444;
+.sidebar-logo a {
+    color: #FFF;
+    font-size: 1.15rem;
+    font-weight: 600;
 }
 
-/* Toggle sidebar*/
-.sidebar {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 20px;
+#sidebar:not(.expand) .sidebar-logo,
+#sidebar:not(.expand) a.sidebar-link span {
+    display: none;
 }
 
-.sidebar a {
-    padding: 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
+.sidebar-nav {
+    padding: 2rem 0;
+    flex: 1 1 auto;
+}
+
+a.sidebar-link {
+    padding: .625rem 1.625rem;
+    color: #FFF;
     display: block;
-    transition: 0.3s;
+    font-size: 0.9rem;
+    white-space: nowrap;
+    border-left: 3px solid transparent;
 }
 
-.sidebar a:hover {
-    color: #f1f1f1;
+.sidebar-link i {
+    font-size: 1.1rem;
+    margin-right: .75rem;
 }
 
-.sidebar .closebtn {
+a.sidebar-link:hover {
+    background-color: rgba(255, 255, 255, .075);
+    border-left: 3px solid #3b7ddd;
+}
+
+.sidebar-item {
+    position: relative;
+}
+
+#sidebar:not(.expand) .sidebar-item .sidebar-dropdown {
     position: absolute;
     top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
+    left: 70px;
+    background-color: #0e2238;
+    padding: 0;
+    min-width: 15rem;
+    display: none;
 }
 
-main {
-    margin-top: 70px;
-    transition: margin-left 0.5s;
-    padding: 16px;
+#sidebar:not(.expand) .sidebar-item:hover .has-dropdown+.sidebar-dropdown {
+    display: block;
+    max-height: 15em;
+    width: 100%;
+    opacity: 1;
 }
 
-/* Responsive sidebar */
-@media screen and (max-height: 450px) {
-    .sidebar { padding-top: 15px; }
-    .sidebar a { font-size: 18px; }
+#sidebar.expand .sidebar-link[data-bs-toggle="collapse"]::after {
+    border: solid;
+    border-width: 0 .075rem .075rem 0;
+    content: "";
+    display: inline-block;
+    padding: 2px;
+    position: absolute;
+    right: 1.5rem;
+    top: 1.4rem;
+    transform: rotate(-135deg);
+    transition: all .2s ease-out;
 }
 
+#sidebar.expand .sidebar-link[data-bs-toggle="collapse"].collapsed::after {
+    transform: rotate(45deg);
+    transition: all .2s ease-out;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    width: 100%;
+    overflow: hidden;
+    transition: all 0.35s ease-in-out;
+}
 /* Left column */
 .leftcolumn {
     float: left;
