--- a/style.css
+++ b/style.css
@@ -124,8 +124,9 @@ body.login-page {
 
 #logo-Text-home {
     font-family: 'Brush Script MT', cursive;
+    font-weight: bold;
     font-size: 35px;
-    color: blue;
+    color: #4b4cfe;
     position: fixed;
     top: 10px;
     right: 10px;
