--- a/style.css
+++ b/style.css
@@ -9,9 +9,21 @@
 /* Setting body agar background memenuhi layar */
 body {
     background: linear-gradient(to bottom right, #f7d6de, #d5e7ee, #7391a8);
-    min-height: 100vh; /* Menjamin bahwa background mengisi seluruh tinggi viewport */
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
+    scroll-behavior: smooth;
+}
+
+/*Styling Footer*/
+.footer {
+    background-color: #333;
+    color: white;
+    padding: 30px 0;
+    position: static;
+    bottom: 0;
+    display: flex;
+    text-align: center;
 }
 
 /* Styling container dan image */
@@ -66,23 +78,6 @@ nav {
     color: #4b4cfe;
 }
 
-body.login-page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-.btn-custom {
-    background-color: #6f63f2;
-    color: white;
-    width: 100%;
-}
-
-.jumbotron {
-    background: linear-gradient(to bottom right, #f7d6de, #d5e7ee, #7391a8);
-
-}
 /*Styling form Login */
 body.login-page {
     margin: 0;
@@ -109,7 +104,6 @@ body.login-page {
     background-color: #5549cc !important;
 }
 
-
 .jumbotron-login {
     background: white;
     padding: 2rem;
@@ -132,6 +126,7 @@ body.login-page {
     right: 10px;
     position: fixed;
 }
+
 /* Styling Sidebar */
 .navbar .d-flex {
     display: flex;
@@ -148,13 +143,6 @@ li {
 
 .wrapper {
     display: flex;
-}
-
-.main {
-    min-height: 100vh;
-    width: 100%;
-    overflow: hidden;
-    transition: all 0.35s ease-in-out;
 }
 
 #sidebar {
@@ -306,10 +294,6 @@ a.sidebar-link:hover {
     line-height: 1.2;
     margin-bottom: 20px;
     color: #000;
-}
-
-.highlight {
-    color: red;
 }
 
 .content {
