--- a/style.css
+++ b/style.css
@@ -330,3 +330,17 @@ a.sidebar-link:hover {
 h2 {
     margin-bottom: 10px;
 }
+
+/* Gaya untuk animasi */
+.preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
