--- a/style.css
+++ b/style.css
@@ -271,6 +271,7 @@ a.sidebar-link:hover {
 
 /* Card */
 .card {
+    box-shadow: 0 7px 7px rgba(0, 0, 0, 0.1);
     background-color: white;
     padding: 20px;
     margin-top: 20px;
