--- a/style.css
+++ b/style.css
@@ -29,21 +29,27 @@ body {
 /* Styling container dan image */
 .container {
     display: flex;
-    align-items: center; /* Konten berada di tengah vertikal */
-    justify-content: space-between; /* Jarak antara gambar dan teks */
+    align-items: center;
+    /* Konten berada di tengah vertikal */
+    justify-content: space-between;
+    /* Jarak antara gambar dan teks */
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
 }
 
 .image-container {
-    flex: 1; /* Mengambil satu bagian dari ruang yang tersedia */
-    max-width: 50%; /* Batasi lebar gambar */
+    flex: 1;
+    /* Mengambil satu bagian dari ruang yang tersedia */
+    max-width: 50%;
+    /* Batasi lebar gambar */
 }
 
 .image-container img {
-    width: 100%; /* Gambar menyesuaikan dengan lebar container */
-    height: auto; /* Menjaga proporsi gambar */
+    width: 100%;
+    /* Gambar menyesuaikan dengan lebar container */
+    height: auto;
+    /* Menjaga proporsi gambar */
 }
 
 /* Styling navbar */
@@ -58,8 +64,9 @@ nav {
     z-index: 1000;
     transition: top 0.3s;
 }
-.navbar{
-    background: linear-gradient(to right,  #d5e7ee, #decbe4);
+
+.navbar {
+    background: linear-gradient(to right, #d5e7ee, #decbe4);
 }
 
 .navbar-nav {
@@ -70,7 +77,8 @@ nav {
 }
 
 .navbar-nav .nav-item {
-    margin: 0 15px; /* Memberi jarak kiri dan kanan item */
+    margin: 0 15px;
+    /* Memberi jarak kiri dan kanan item */
 }
 
 /* Styling logo */
@@ -109,6 +117,7 @@ body.login-page {
 
 .jumbotron-login {
     background: white;
+    margin-top: 50px;
     padding: 2rem;
     border-radius: 10px;
     max-width: 500px;
@@ -128,6 +137,26 @@ body.login-page {
     top: 10px;
     right: 10px;
     position: fixed;
+}
+
+/*Styling form signup */
+body.signup-page {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+}
+
+.jumbotron-signup {
+    background: white;
+    margin-top: 110px;
+    margin-bottom: 40px;
+    padding: 2rem;
+    border-radius: 10px;
+    max-width: 500px;
+    width: 100%;
 }
 
 /* Styling Sidebar */
@@ -263,6 +292,7 @@ a.sidebar-link:hover {
     overflow: hidden;
     transition: all 0.35s ease-in-out;
 }
+
 /* Left column */
 .leftcolumn {
     float: left;
