--- a/style.css
+++ b/style.css
@@ -191,13 +191,15 @@ li {
 }
 
 #sidebar {
+    min-height: 100vh; 
     width: 70px;
     min-width: 70px;
     z-index: 1000;
-    transition: all .25s ease-in-out;
+    transition: all 0.25s ease-in-out;
     background-color: #0e2238;
     display: flex;
     flex-direction: column;
+    
 }
 
 #sidebar.expand {
@@ -387,4 +389,37 @@ h2 {
     justify-content: center;
     align-items: center;
     z-index: 9999;
+}
+
+/*Styling footer home*/
+footer {
+    background-color: #343a40;
+    color: white;
+    text-align: justify;
+    padding: 10px 0;
+    margin-top: 20px;
+    font-size: 0.8rem;
+}
+
+.footer-links a {
+    color: white;
+    margin: 0 10px;
+    text-decoration: none;
+}
+
+.footer-links {
+    padding: 0;
+}
+
+/*Styling kalender*/
+.current-day {
+    background-color: #0d6efd;
+    color: rgb(255, 0, 140);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
 }
