--- a/Class_Digital/templates/cd_app/class.html
+++ b/Class_Digital/templates/cd_app/class.html
@@ -16,10 +16,12 @@
         href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet" />
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+        integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-  <body>
+<body>
     <div class="wrapper">
         <aside id="sidebar">
             <div class="d-flex">
@@ -27,60 +29,62 @@
                     <i class="lni lni-menu"></i>
                 </button>
                 <div class="sidebar-logo">
-                    <a href="#">Halaman Kelas</a>
+                    <a href="#" style="text-decoration: none;">Halaman Kelas</a>
                 </div>
             </div>
             <nav class="nav navbar-expand-lg bg-transparent">
                 <div class="container-fluid mx-5">
                     <div class="ms-auto">
-                        <a class="navbar-brand" id="logo-Text-home" href="{% url 'cd_app:dashboard' %}">Class Digital</a>
+                        <a class="navbar-brand" id="logo-Text-home" href="{% url 'cd_app:dashboard' %}">Class
+                            Digital</a>
                     </div>
                 </div>
             </nav>
-                <ul class="sidebar-nav">
-                    <li class="sidebar-item">
-                        <a href="{% url 'cd_app:dashboard' %}" class="sidebar-link">
+            <ul class="sidebar-nav">
+                <li class="sidebar-item">
+                    <a href="{% url 'cd_app:dashboard' %}" class="sidebar-link" style="text-decoration: none;">
                         <i class="lni lni-home"></i>
                         <span>Dashboard</span>
-                        </a>
-                    </li>
-                    <li class="sidebar-item">
-                        <a href="{% url 'cd_app:forum' %}" class="sidebar-link">
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="{% url 'cd_app:forum' %}" class="sidebar-link" style="text-decoration: none;">
                         <i class="fa-solid fa-list-check"></i>
                         <span>Forum</span>
-                        </a>
-                    </li>
-                    <li class="sidebar-item">
-                        <a href="presence.html" class="sidebar-link">
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="presence.html" class="sidebar-link" style="text-decoration: none;">
                         <i class="fa-solid fa-person-chalkboard"></i>
                         <span>Kehadiran</span>
-                        </a>
-                    </li>
-                    <li class="sidebar-item">
-                        <a href="task.html" class="sidebar-link">
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="task.html" class="sidebar-link" style="text-decoration: none;">
                         <i class="fa-solid fa-bars-progress"></i>
                         <span>Tugas</span>
-                        </a>
-                    </li>
-                    <li class="sidebar-item">
-                        <a href="recap-values.html" class="sidebar-link">
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="recap-values.html" class="sidebar-link" style="text-decoration: none;">
                         <i class="fa-solid fa-ranking-star"></i>
                         <span>Rekap</span>
-                        </a>
-                    </li>
-                    <li class="sidebar-item">
-                        <a href="list-mahasiswa.html" class="sidebar-link">
+                    </a>
+                </li>
+                <li class="sidebar-item">
+                    <a href="list-mahasiswa.html" class="sidebar-link" style="text-decoration: none;">
                         <i class="fa-solid fa-users-line"></i>
                         <span>Mahasiswa</span>
-                        </a>
-                    </li>
-                </ul>
-                <div class="sidebar-footer">
-                    <a href="{% url 'logout' %}" class="sidebar-link" onclick="return confirm('Apakah Anda yakin ingin logout?');">
-                        <i class="lni lni-exit"></i>
-                        <span>Logout</span>
                     </a>
-                </div> 
+                </li>
+            </ul>
+            <div class="sidebar-footer">
+                <a href="{% url 'logout' %}" class="sidebar-link"
+                    onclick="return confirm('Apakah Anda yakin ingin logout?');" style="text-decoration: none;">
+                    <i class="lni lni-exit"></i>
+                    <span>Logout</span>
+                </a>
+            </div>
         </aside>
         <!-- Main Content -->
         <div class="container my-5">
@@ -88,6 +92,16 @@
             {% endblock %}
         </div>
     </div>
-    
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function () {
+            $('.toggle-btn').on('click', function () {
+                $('#sidebar').toggleClass('expand');
+            });
+        });
+    </script>
+
 </body>
+
 </html>
