--- a/Class_Digital/templates/cd_app/class.html
+++ b/Class_Digital/templates/cd_app/class.html
@@ -42,39 +42,39 @@
             </nav>
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
-                    <a href="{% url 'cd_app:dashboard' %}" class="sidebar-link" style="text-decoration: none;">
-                        <i class="lni lni-home"></i>
-                        <span>Dashboard</span>
+                    <a href="{% url 'cd_app:dashboard' %}" class="sidebar-link">
+                    <i class="lni lni-home"></i>
+                    <span>Dashboard</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="{% url 'cd_app:forum' %}" class="sidebar-link" style="text-decoration: none;">
-                        <i class="fa-solid fa-list-check"></i>
-                        <span>Forum</span>
+                    <a href="{% url 'cd_app:forum' %}" class="sidebar-link">
+                    <i class="fa-solid fa-list-check"></i>
+                    <span>Forum</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="presence.html" class="sidebar-link" style="text-decoration: none;">
-                        <i class="fa-solid fa-person-chalkboard"></i>
-                        <span>Kehadiran</span>
+                    <a href="{% url 'cd_app:presence' %}" class="sidebar-link">
+                    <i class="fa-solid fa-person-chalkboard"></i>
+                    <span>Kehadiran</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="task.html" class="sidebar-link" style="text-decoration: none;">
-                        <i class="fa-solid fa-bars-progress"></i>
-                        <span>Tugas</span>
+                    <a href="{% url 'cd_app:task' %}" class="sidebar-link">
+                    <i class="fa-solid fa-bars-progress"></i>
+                    <span>Tugas</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="recap-values.html" class="sidebar-link" style="text-decoration: none;">
-                        <i class="fa-solid fa-ranking-star"></i>
-                        <span>Rekap</span>
+                    <a href="{% url 'cd_app:recap' %}" class="sidebar-link">
+                    <i class="fa-solid fa-ranking-star"></i>
+                    <span>Rekap</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="list-mahasiswa.html" class="sidebar-link" style="text-decoration: none;">
-                        <i class="fa-solid fa-users-line"></i>
-                        <span>Mahasiswa</span>
+                    <a href="{% url 'cd_app:list' %}" class="sidebar-link">
+                    <i class="fa-solid fa-users-line"></i>
+                    <span>Mahasiswa</span>
                     </a>
                 </li>
             </ul>
