--- a/Class_Digital/templates/cd_app/class.html
+++ b/Class_Digital/templates/cd_app/class.html
@@ -42,37 +42,37 @@
             </nav>
             <ul class="sidebar-nav">
                 <li class="sidebar-item">
-                    <a href="{% url 'cd_app:dashboard' %}" class="sidebar-link">
+                    <a href="{% url 'cd_app:dashboard' %}" class="sidebar-link" style="text-decoration: none;">
                     <i class="lni lni-home"></i>
                     <span>Dashboard</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="{% url 'cd_app:forum' %}" class="sidebar-link">
+                    <a href="{% url 'cd_app:forum' %}" class="sidebar-link" style="text-decoration: none;">
                     <i class="fa-solid fa-list-check"></i>
                     <span>Forum</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="{% url 'cd_app:presence' %}" class="sidebar-link">
+                    <a href="{% url 'cd_app:presence' %}" class="sidebar-link" style="text-decoration: none;">
                     <i class="fa-solid fa-person-chalkboard"></i>
                     <span>Kehadiran</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="{% url 'cd_app:task' %}" class="sidebar-link">
+                    <a href="{% url 'cd_app:task' %}" class="sidebar-link" style="text-decoration: none;">
                     <i class="fa-solid fa-bars-progress"></i>
                     <span>Tugas</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="{% url 'cd_app:recap' %}" class="sidebar-link">
+                    <a href="{% url 'cd_app:recap' %}" class="sidebar-link" style="text-decoration: none;">
                     <i class="fa-solid fa-ranking-star"></i>
                     <span>Rekap</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="{% url 'cd_app:list' %}" class="sidebar-link">
+                    <a href="{% url 'cd_app:list' %}" class="sidebar-link" style="text-decoration: none;">
                     <i class="fa-solid fa-users-line"></i>
                     <span>Mahasiswa</span>
                     </a>
@@ -80,7 +80,7 @@
             </ul>
             <div class="sidebar-footer">
                 <a href="{% url 'logout' %}" class="sidebar-link"
-                    onclick="return confirm('Apakah Anda yakin ingin logout?');" style="text-decoration: none;">
+                    onclick="return confirm('Apakah Anda yakin ingin logout?');" style="text-decoration: none;" style="text-decoration: none;">
                     <i class="lni lni-exit"></i>
                     <span>Logout</span>
                 </a>
