--- a/Class_Digital/templates/cd_app/presence.html
+++ b/Class_Digital/templates/cd_app/presence.html
@@ -2,6 +2,45 @@
 {% load static %}
 
 {% block body_block %}
+<head>
+  <style>
+      /* styling preference */
+      .title-task h1 {
+        color: blue; 
+        border-bottom: 1px solid blue; 
+        padding-bottom: 0.5rem; 
+    }
+      .container-presence {
+          margin-left: 4rem;
+          width: 80%;
+          /* background-color: #000; */
+          margin-top: 6rem;
+          padding-bottom: 2rem;
+      }
+      .week-to {
+          font-size: 2rem;
+      }
+      .wrap-fill-presence {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          line-height: 50px;
+      }
+      .button-presence a {
+          /* padding: 2rem 2rem ; */
+          color: black;
+          width: 10px;
+      }
+      .bg-button {
+          border-radius: 10px;
+          padding: 0rem 5rem;
+          background-color: #998FFF;
+          line-height: 30px;
+          padding-bottom: 0.1rem;
+          padding-top: 1rem;
+      }
+  </style>
+</head>
       <!-- Main -->
       <div class="container-presence">
         <div class="title-task">
